# bevy-game

./: Cargo.toml
.cargo/: config.toml
assets/maps/: default.tiled-session  map.json  map.tmj  scene.tmx
assets/maps/default/: Tiles.tsx  default.tiled-session  default.tmx  map.json  tiles.json
assets/maps/test/: collision.tsx  hills.json  hills.tsx  map.json  scene.tmx
crates/controls_plugin/: Cargo.toml
crates/controls_plugin/src/: lib.rs  resources.rs
crates/core/debug_plugin/: Cargo.toml
crates/core/debug_plugin/src/: fps_displayer.rs  lib.rs
crates/player_plugin/: Cargo.toml
crates/player_plugin/src/: lib.rs  resources.rs
crates/player_plugin/src/plugins/: camera.rs
crates/player_plugin/src/systems/: actions.rs  animation.rs  mod.rs  movements.rs  setup.rs
crates/shared_resource_plugin/: Cargo.toml
crates/shared_resource_plugin/src/: lib.rs
crates/ui_component/: Cargo.toml
crates/ui_component/src/: lib.rs
crates/world_plugin/: Cargo.toml
crates/world_plugin/src/: lib.rs  systems.rs
src/: core.rs  main.rs  maps.rs  setup_world.rs
src/plugin/: animation.rs  collision_ui.rs  debug.rs  mod.rs  movement.rs  world.rs
src/plugin/controls/: resources.rs
src/plugin/player/: camera.rs  components.rs  controls.rs  mod.rs  resources.rs  systems.rs
src/plugin/player/plugins/: camera.rs
src/plugin/player/systems/: actions.rs  animation.rs  mod.rs  movements.rs  setup.rs
src/plugin/props/: mod.rs
src/plugin/world/: components.rs  mod.rs  systems.rs
