[package]
name = "bevygame"
version = "0.1.0"
edition = "2021"

[dependencies]
iyes_perf_ui = "*"
serde = "*"
serde_json = "*"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_rapier2d = "*"
bevy = { version = "*"}
bevy_tiled_plugin = {path = "../bevy_tiled_plugin/"}

[profile.dev.package."*"]
opt-level = 3


[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
incremental = false
debug = false